<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/rect_white_exit"
    android:padding="@dimen/_10sdp">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageViewIcon"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_150sdp"
        android:background="@drawable/pro_icon"
        app:layout_constraintBottom_toTopOf="@id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/pro_detail_text"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toTopOf="@id/whatch_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewIcon" />

    <TextView
        android:id="@+id/whatch_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:paddingVertical="@dimen/_12sdp"
        app:layout_constraintWidth_percent="0.65"
        android:text="@string/whatch_view"
        android:background="@drawable/rect_nav_yes"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/buy_pro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <TextView
        android:id="@+id/buy_pro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_bro_btn"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintWidth_percent="0.65"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/buy_pro"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/whatch_view"
        app:layout_constraintStart_toStartOf="@id/whatch_view"
        app:layout_constraintTop_toBottomOf="@id/whatch_view" />

</androidx.constraintlayout.widget.ConstraintLayout>