<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.75">


        <View
            android:id="@+id/top_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/_150sdp"
            android:background="#4D77FF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--    Share Button -->
        <View
            android:id="@+id/share_app_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="@id/rate_us_view"
            app:layout_constraintStart_toStartOf="@id/rate_us_view"
            app:layout_constraintTop_toBottomOf="@id/rate_us_view" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/share_app_image"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@drawable/nave_share"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/share_app_view"
            app:layout_constraintEnd_toStartOf="@+id/share_app_text"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/share_app_view"
            app:layout_constraintTop_toTopOf="@id/share_app_view" />

        <TextView
            android:id="@+id/share_app_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="start"
            android:singleLine="true"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/share_app_image"
            app:layout_constraintEnd_toEndOf="@id/share_app_view"
            app:layout_constraintStart_toEndOf="@+id/share_app_image"
            app:layout_constraintTop_toTopOf="@+id/share_app_image" />

        <!--    Rate Us Button -->
        <View
            android:id="@+id/rate_us_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="@+id/more_app_view"
            app:layout_constraintStart_toStartOf="@id/more_app_view"
            app:layout_constraintTop_toBottomOf="@id/more_app_view" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/rate_us_image"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@drawable/nav_rate"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/rate_us_view"
            app:layout_constraintEnd_toStartOf="@+id/rate_us_text"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/rate_us_view"
            app:layout_constraintTop_toTopOf="@id/rate_us_view" />

        <TextView
            android:id="@+id/rate_us_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="start"
            android:textStyle="bold"
            android:singleLine="true"
            android:text="@string/rate_us"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/rate_us_image"
            app:layout_constraintEnd_toEndOf="@id/rate_us_view"
            app:layout_constraintStart_toEndOf="@+id/rate_us_image"
            app:layout_constraintTop_toTopOf="@+id/rate_us_image" />

        <!--    Rate Us Button -->
        <View
            android:id="@+id/language_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_view" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/language_image"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@drawable/nave_share"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/language_view"
            app:layout_constraintEnd_toStartOf="@+id/language_text"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/language_view"
            app:layout_constraintTop_toTopOf="@id/language_view" />

        <TextView
            android:id="@+id/language_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="start"
            android:singleLine="true"
            android:text="@string/language"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/language_image"
            app:layout_constraintEnd_toEndOf="@id/language_view"
            app:layout_constraintStart_toEndOf="@+id/language_image"
            app:layout_constraintTop_toTopOf="@+id/language_image" />

        <!--    Rate Us Button -->
        <View
            android:id="@+id/more_app_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="@+id/privacy_view"
            app:layout_constraintStart_toStartOf="@id/privacy_view"
            app:layout_constraintTop_toBottomOf="@id/privacy_view" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/more_app_image"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@drawable/nave_more"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/more_app_view"
            app:layout_constraintEnd_toStartOf="@+id/more_app_text"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/more_app_view"
            app:layout_constraintTop_toTopOf="@id/more_app_view" />

        <TextView
            android:id="@+id/more_app_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="start"
            android:singleLine="true"
            android:textStyle="bold"
            android:text="@string/more_app"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/more_app_image"
            app:layout_constraintEnd_toEndOf="@id/more_app_view"
            app:layout_constraintStart_toEndOf="@+id/more_app_image"
            app:layout_constraintTop_toTopOf="@+id/more_app_image" />

        <!--    Privacy Button -->
        <View
            android:id="@+id/privacy_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="@+id/language_view"
            app:layout_constraintStart_toStartOf="@id/language_view"
            app:layout_constraintTop_toBottomOf="@id/language_view" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/privacy_image"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_33sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@drawable/nave_privacy"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/privacy_view"
            app:layout_constraintEnd_toStartOf="@+id/privacy_text"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/privacy_view"
            app:layout_constraintTop_toTopOf="@id/privacy_view" />

        <TextView
            android:id="@+id/privacy_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="start"
            android:singleLine="true"
            android:text="@string/privacy"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_18sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/privacy_image"
            app:layout_constraintEnd_toEndOf="@id/privacy_view"
            app:layout_constraintStart_toEndOf="@+id/privacy_image"
            app:layout_constraintTop_toTopOf="@+id/privacy_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>